--- a/index.html
+++ b/index.html
@@ -10,26 +10,41 @@
         <script src="js/w3Data.js"></script><!-- nunca, em hipotese alguma remova esse código. Obrigado. --> <!-- O w3Data é a biblioteca do w3 que é nada mais que um arquivo js com funções prontas para uso, no nosso caso, usamos a função include html para chamar o menu -->
     </head>
     <body>
-    	<div w3-include-html="menuSite.html"></div> <!--esta div é para chamar o menu usando o include html do w3 que chama o arquivo menuSite.html e o inclui dentro dessa div -->
-    	
- 		<section class="banner"> <!-- a tag section serve para dividir o código em seções, no nesse caso, essa é a seção do banner. -->
-      		<span class="pagina"></span> <!-- neste span é onde iremos adicionar o indice (bolinhas) do banner que chamamos as imagens e apontam qual é a imagem atual -->
-      		<div class="slider">
-        		<div class="slider-item">
-          			<img src="img/banner1.jpg" alt=""/>
-        		</div>
-        		<div class="slider-item">
-          			<img src="img/banner2.jpg" alt=""/>
-        		</div>
-        		<div class="slider-item">
-          			<img src="img/banner3.jpg" alt=""/>
-        		</div>
-        		<div class="slider-item">
-          			<img src="img/banner4.jpg" alt=""/>
-        		</div>
-        		<!-- as imagens ainda serão editadas e talvez possamos colocar outras melhores -->
-      		</div> <!-- div do slide e as imagens que iram ser aplicadas ao banner -->
-    	</section>
+    	<section class="content">
+	    	<div w3-include-html="menuSite.html"></div> <!--esta div é para chamar o menu usando o include html do w3 que chama o arquivo menuSite.html e o inclui dentro dessa div -->
+	    	
+	 		<section class="banner movit"> <!-- a tag section serve para dividir o código em seções, no nesse caso, essa é a seção do banner. -->
+	      		<span class="pagina"></span> <!-- neste span é onde iremos adicionar o indice (bolinhas) do banner que chamamos as imagens e apontam qual é a imagem atual -->
+	      		<div class="slider">
+	        		<div class="slider-item">
+	          			<img src="img/banner1.jpg" alt=""/>
+	        		</div>
+	        		<div class="slider-item">
+	          			<img src="img/banner2.jpg" alt=""/>
+	        		</div>
+	        		<div class="slider-item">
+	          			<img src="img/banner3.jpg" alt=""/>
+	        		</div>
+	        		<div class="slider-item">
+	          			<img src="img/banner4.jpg" alt=""/>
+	        		</div>
+	        		<!-- as imagens ainda serão editadas e talvez possamos colocar outras melhores -->
+	      		</div> <!-- div do slide e as imagens que iram ser aplicadas ao banner -->
+	    	</section>
+
+			<section class="noticias movit">
+	    		<div class="container">
+	    			<h1>Noticias do Campus</h1>
+					<div class="publicacao right">
+						<h1>A comida da cantina tá muito cara</h1>
+						<p>Por motivos da crise financeira, alunos do IFJG preferem o "Tio lá da frente" ao invés do "Tio da cantina" por motivos de preço baixo e qualidade do produto! <br>Alunos vem reclamando da quantidade de vezes que compraram coxinha no Tio da cantina e receberam um produto velho, do dia anterior, mesmo pagando um valor consideravelmente caro. Por volta de um mês, apareceu uma novidade: Um novo vendedor de lanches na frente do campus, conhecido também como "Tio lá da frente" que vende vários tipos de salgados, grandes e deliciosos por apenas três reais e por mais dois reais pode adquirir um suco da fruta (acredite, da fruta)! <br>Com essa consideravel diferença, os alunos preferem ir no Tio lá da frente e o Tio da cantina começou a perder a clientela gradualmente. É nisso que dá vender comida cara.</p>
+					</div>
+					<div class="publicacao">
+						<h1>Saiu a lista de alunos para o bolsa permanencia</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo rerum facilis deserunt maxime perspiciatis suscipit numquam ipsam, quisquam nesciunt, expedita voluptas et placeat odio nisi dolorum. Ab, minus nam tenetur.</p>
+					</div>
+		    	</div>
+			</section>    		
 
 			<section class="oportunidades movit">
 				<div class="container">
@@ -80,11 +95,15 @@
 			</section>
 
     	</section>
+
         <script>
 			w3IncludeHTML();
 		</script> <!-- este script é onde chamamos a função do w3Data, mais explicações sobre isso no link que Francisco colocou na atividade. -->
 		<script type="text/javascript" src="js/jquery-1.11.2.js"></script>
     	<script type="text/javascript" src="js/jquery.cycle.all.js"></script><!-- No banner usamos o plugin Cycle que é bem simples e prático. Pra utilizar ele precisamos linkar o arquivo no código, precisamente dessa forma, colocando o arquivo jquery primeiro, depois o arquivo cycle, seguido do arquivo ou código onde chamamos a função e determinamos o que queremos para nosso banner. -->
     	<script type="text/javascript" src="js/main.js"></script> <!-- arquivo onde vamos colocar TODOS os códigos js que seram usados no nosso site -->
+    	<!--<script type="text/javascript" src="js/jquery.min.js"></script>-->
+		<script type="text/javascript" src="js/modernizr.custom.min.js"></script>	
+		<script type="text/javascript" src="js/ScrollMagic.js"></script>
     </body>
 </html>
