adicionando página do quem somos, ipi e qualidade

--- a/menuSite.html
+++ b/menuSite.html
@@ -10,16 +10,16 @@
 		    		<div class="navegacao">
 		    			<ul>
 		    				<li>
-		    					<a href="quem-somos.html">Quem somos</a>
+		    					<a href="quemSomos.html">Quem somos</a>
 		    				</li>
 		    				<li>
 		    					<a href="cursos.html">Cursos</a>
 		    					<ul class="drop-cursos">
 		    						<li class="ipi">
-		    							<a href="">Informática para Internet</a>
+		    							<a href="informatica-para-internet.html">Informática para Internet</a>
 		    						</li>
 		    						<li>
-		    							<a href="">Qualidade</a>
+		    							<a href="qualidade.html">Qualidade</a>
 		    						</li>
 		    					</ul> <!-- este ul dentro do li é onde fazemos o dropdown do menu, para criar isso fiz uma lista dentro do li cursos que é onde tem o dropdown que chama a págida de cada curso do campos -->
 		    				</li>
