reiniciando sistema academico

--- a/menuSite.html
+++ b/menuSite.html
@@ -27,7 +27,7 @@
 		    					<a href="contato.html">Contato</a>
 		    				</li>
 		    				<li>
-		    					<a href="">Entrar</a>
+		    					<a href="sistema/index.html">Entrar</a>
 		    				</li>
 		    			</ul>
 			    		<div class="busca">
