--- a/quemSomos.html
+++ b/quemSomos.html
@@ -7,11 +7,46 @@
 	<title>IFPE-JG</title>
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,900' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
-	<script src="js/w3Data.js"></script><!-- nunca, em hipotese alguma remova esse código. Obrigado. --> <!-- O w3Data é a biblioteca do w3 que é nada mais que um arquivo js com funções prontas para uso, no nosso caso, usamos a função include html para chamar o menu -->
 </head>
 <body>
 	<section class="content">
-		<div w3-include-html="menuSite.html"></div> <!--esta div é para chamar o menu usando o include html do w3 que chama o arquivo menuSite.html e o inclui dentro dessa div -->
+		<section class="fixed">
+	    	<div class="container"> <!-- o container é para alinhar os elementos do menu no centro da página independente do tamanho dela -->
+		    	<nav class="menu">
+		    		<picture>
+		    			<a href="index.html">
+			    			<img src="img/ifpe_logomarca.png" alt="Logo IFPE">
+		    			</a>
+		    		</picture>
+		    		<div class="navegacao">
+		    			<ul>
+		    				<li>
+		    					<a href="quemSomos.html">Quem somos</a>
+		    				</li>
+		    				<li>
+		    					<a href="cursos.html">Cursos</a>
+		    					<ul class="drop-cursos">
+		    						<li class="ipi">
+		    							<a href="informatica-para-internet.html">Informática para Internet</a>
+		    						</li>
+		    						<li>
+		    							<a href="qualidade.html">Qualidade</a>
+		    						</li>
+		    					</ul> <!-- este ul dentro do li é onde fazemos o dropdown do menu, para criar isso fiz uma lista dentro do li cursos que é onde tem o dropdown que chama a págida de cada curso do campos -->
+		    				</li>
+		    				<li>
+		    					<a href="contato.html">Contato</a>
+		    				</li>
+		    				<li>
+		    					<a href="sistema/index.html">Entrar</a>
+		    				</li>
+		    			</ul>
+			    		<div class="busca">
+			    			<input type="text">
+			    		</div>
+		    		</div>
+		    	</nav>
+	    	</div>
 		<section class="quemSomos">
 			<div class="container">
 				<h1>Institucional</h1>
@@ -43,10 +78,6 @@
 		</section>
 
 	</section>
-
-	<script>
-		w3IncludeHTML();
-	</script> <!-- este script é onde chamamos a função do w3Data, mais explicações sobre isso no link que Francisco colocou na atividade. -->
 	<script src="js/main.js"></script>
 </body>
 </html>
