--- a/sistema/aluno/menu_aluno.html
+++ b/sistema/aluno/menu_aluno.html
@@ -9,27 +9,28 @@
         <link rel="stylesheet" href="../../css/style.css">
     </head>
     <body>
-        <div class="logo">
-            <img src="../../img/ifpe_logomarca.png" alt="logo IFPE">
-        </div><!-- logo do sistema -->
+        <section class="sistem-content">
+            <section class="topofix">
+                <div class="container">
+                    <img src="../../img/logo-sistema.jpg" alt="logo do Sistema IFJG">
+                    <a href="../index.html" class="btn">Voltar ao menu</a> <!-- Esta tag será o botão para voltar a página do site, caso queira. -->
+                </div>
+            </section>
 
         <div class="container">
-            <div class="conteudo">
-                <h1>Sistema de Gestão Acadêmica -ACAD</h1>
-                <h2>Portal do Aluno</h2>
+            <section class="conteudo">
                 <ul type="1">
                     <li>
-                        <a href="alterar_dados_pessoais.html">Alterar dados pessoais</a>
+                        <a href="alterar_dados_pessoais.html" class="aluno">Alterar dados pessoais</a>
                     </li>
                     <li>
-                        <a href="visualizar_notas_faltas.html">Visualizar notas e faltas</a>
+                        <a href="visualizar_notas_faltas.html" class="aluno">Visualizar notas e faltas</a>
                     </li>
                     <li>
-                        <a href="emitir_comprovante_matricula.html">Emitir comprovante de matrícula</a>
+                        <a href="emitir_comprovante_matricula.html" class="aluno">Emitir comprovante de matrícula</a>
                     </li>
                 </ul>
-                <a href="../index.html" class="menu-principal">Menu principal</a>
-            </div>
+            </section>
         </div>
         
     </body>
