--- a/sistema/index.html
+++ b/sistema/index.html
@@ -13,7 +13,7 @@
             <section class="topofix">
                 <div class="container">
                     <img src="../img/logo-sistema.jpg" alt="logo do Sistema IFJG">
-                    <a href="../index.html" class="btn">Sair</a> <!-- Esta tag será o botão para voltar a página do site, caso queira. -->
+                    <a href="../index.html" class="btn sair">Sair</a> <!-- Esta tag será o botão para voltar a página do site, caso queira. -->
                 </div>
             </section>
             
@@ -21,19 +21,19 @@
                 <div class="container">
                     <ul>
                         <li>
-                            <a href="professor/menu_professor.html" class="opcao-user aluno">
+                            <a href="aluno/login_aluno.html" class="opcao-user aluno">
                                 <img src="../img/icon-aluno.png" alt="Icon Aluno">
                                 <p class="txt-user">Aluno</p>
                             </a>
                         </li>
                         <li>
-                            <a href="aluno/menu_aluno.html" class="opcao-user prof">
+                            <a href="professor/login_professor.html" class="opcao-user prof">
                                 <img src="../img/icon-professor.png" alt="Icon Professor">
                                 <p class="txt-user">Professor</p>
                             </a>
                         </li>
                         <li>
-                            <a href="secretaria/menu_secretaria.html" class="opcao-user secretaria">
+                            <a href="secretaria/login_secretaria.html" class="opcao-user secretaria">
                                 <img src="../img/icon-secretaria.png" alt="Icon Secretaria">
                                 <p class="txt-user">Secretaria</p>
                             </a>
@@ -47,9 +47,6 @@
                     </ul>
                 </div>
             </section>
-            </div>
         </section>
-
-
     </body>
 </html>
