--- a/sistema/aluno/alterar_dados_pessoais.html
+++ b/sistema/aluno/alterar_dados_pessoais.html
@@ -9,35 +9,30 @@
         <link rel="stylesheet" href="../../css/style.css">
     </head>
     <body>
-        <div class="logo">
-            <img src="../../img/ifpe_logomarca.png" alt="logo IFPE">
-        </div><!-- logo do sistema -->
-        
-        <div class="container">
-            <div class="conteudo">
-                <h1>Sistema de Gestão Acadêmica -ACAD</h1>
-                <h2><a href="menu_aluno.html">Aluno</a> :: Alterar dados pessoais</h2>
-                    <div class="cadastro">
-                        <form action="form-to-cadastro.php" method="post">
-                            <div class="nome">
-                                <label for="nome" class="nom">Nome:</label>
-                                <input type="text" id="nome">
-                            </div>
-                            <div class="cpf">
-                                <label for="cpf" class="cepef">CPF do Responsável:</label>
-                                <input type="text" id="cpf">
-                            </div>
-                            <div class="matricula">
-                                <label for="matricula" class="matr">Matrícula:</label>
-                                <input type="text" id="matricula">
-                            </div>
-                            <button type="submit" name="Enviar" value="Enviar" id="botao">Enviar</button>
-                        </form>
+        <section class="sistem-content">
+            <section class="topofix">
+                <div class="container">
+                <img src="../../img/logo-sistema.jpg" alt="logo do Sistema IFJG">
+                    <a href="../index.html" class="btn">Voltar ao menu</a> <!-- Esta tag será o botão para voltar a página do site, caso queira. -->
+                </div>
+            </section>
+            <div class="container">
+                <section class="login">
+                    <div class="perfil aluno">
+                        <h1>Aluno</h1>
                     </div>
-                <a href="../index.html" class="menu-principal">Menu principal</a>
+                    <form class="formzinho" name="formzinho">
+                        <label for="nome" class="nom">Nome:</label>
+                        <input type="text" id="nome"> <br>
+                        <label for="cpf" class="cepef">CPF:</label>
+                        <input type="text" id="cpf" name="cpf" onkeypress="MascaraCPF(formzinho.cpf);" onblur="ValidarCPF(formzinho.cpf)" maxlength="14"> <br>
+                        <label for="matricula" class="matr">Matrícula:</label>
+                        <input type="text" id="matricula"><br>
+                        <a href="">Enviar</a>
+                    </form>
+                </section>
             </div>
-
-        </div>
-        
+        </section>
+        <script src="../../js/validacao.js"></script>
     </body>
 </html>
