--- a/sistema/help.html
+++ b/sistema/help.html
@@ -6,48 +6,53 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Sistema de Gestão Acadêmica - ACAD</title>
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,900' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="../style.css">
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
-        <div class="logo">
-        	<img src="../img/ifpe_logomarca.png" alt="logo IFPE">
-        </div><!-- logo do sistema -->
+        <section class="sistem-content">
+            <section class="topofix">
+                <div class="container">
+                    <img src="../img/logo-sistema.jpg" alt="logo do Sistema IFJG">
+                    <a href="index.html" class="btn">Voltar ao menu</a> <!-- Esta tag será o botão para voltar a página do site, caso queira. -->
+                </div>
+            </section>
 
-    	<div class="container">
-        	<div class="conteudo">
-		        <h1>Sistema de Gestão Acadêmica -ACAD</h1>
-		        <h2>Manual de utilização das funcionalidades</h2>
-				<ul type="A">
-					<li>
-						<b>Menu do Professor:</b>
-						<ul type="1">
-							<li>Registrar faltas</li>
-							<li>Registrar notas</li>
-							<li>Cadastrar projeto de pesquisa</li>
-						</ul>
-					</li>
-					<br>
-					<li>
-						<b>Menu do Aluno:</b>
-						<ul type="1">
-							<li>Alterar dados pessoais</li>
-							<li>Visualizar notas e faltas</li>
-							<li>Emitir comprovante de matrícula</li>
-						</ul>
-					</li>
-					<br>
-					<li>
-						<b>Menu da Secretaria:</b>
-						<ul type="1">
-							<li>Cadastrar professor</li>
-							<li>Cadastrar cursos e disciplinas</li>
-							<li>Realizar matrícula</li>
-							<li>Emitir histórico</li>
-						</ul>
-					</li>
-				</ul>
-        	</div>
-        </div>
-
+            <div class="container">
+            	<section class="ajuda">
+            		<div class="perfil help">
+	            		<h1>Manual de utilização das funcionalidades</h1>
+            		</div>
+            		<ul>
+						<li>
+							<p>Menu do Professor:</p>
+							<ul>
+								<li>Registrar faltas</li>
+								<li>Registrar notas</li>
+								<li>Cadastrar projeto de pesquisa</li>
+							</ul>
+						</li>
+						<br>
+						<li>
+							<p>Menu do Aluno:</p>
+							<ul>
+								<li>Alterar dados pessoais</li>
+								<li>Visualizar notas e faltas</li>
+								<li>Emitir comprovante de matrícula</li>
+							</ul>
+						</li>
+						<br>
+						<li>
+							<p>Menu da Secretaria:</p>
+							<ul>
+								<li>Cadastrar professor</li>
+								<li>Cadastrar cursos e disciplinas</li>
+								<li>Realizar matrícula</li>
+								<li>Emitir histórico</li>
+							</ul>
+						</li>
+					</ul>
+            	</section>
+            </div>
+        </section>
     </body>
 </html>
