--- a/sistema/secretaria/cadastrar_cursos_disciplinas.html
+++ b/sistema/secretaria/cadastrar_cursos_disciplinas.html
@@ -9,16 +9,20 @@
         <link rel="stylesheet" href="../../css/style.css">
     </head>
     <body>
-        <div class="logo">
-            <img src="../../img/ifpe_logomarca.png" alt="logo IFPE">
-        </div><!-- logo do sistema -->
-        
+        <section class="sistem-content">
+            <section class="topofix">
+                <div class="container">
+                    <img src="../../img/logo-sistema.jpg" alt="logo do Sistema IFJG">
+                    <a href="../index.html" class="btn">Voltar ao menu</a> <!-- Esta tag será o botão para voltar a página do site, caso queira. -->
+                </div>
+            </section>
+
         <div class="container">
-            <div class="conteudo">
-                <h1>Sistema de Gestão Acadêmica -ACAD</h1>
-                <h2><a href="menu_secretaria.html">Secretaria</a> :: Cadastrar Cursos e Disciplinas</h2>
-                <a href="../index.html" class="menu-principal">Menu principal</a>
-            </div>
+            <section class="login">
+                <div class="perfil secret">
+                    <h1>Secretaria</h1>
+                </div>
+            </section>
         </div>
         
     </body>
