--- a/sistema/secretaria/cadastrar_professor.html
+++ b/sistema/secretaria/cadastrar_professor.html
@@ -1,44 +1,39 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="description" content="Página para a secretaria cadastrar professor no Sistema de Gestão Acadêmica - ACAD feito para praticar a criação de páginas para um sistema acadêmico da cadeira Projeto e Prática 1, coordernado pelo professor Francisco Junior, codificado pelo grupo: Barbaha Maria, Thayane Lopes, Rennan Maxi e Vicente Vinicius; Turma IPI2015.2T">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Sistema de Gestão Acadêmica - ACAD</title>
-        <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,900' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="../../css/style.css">
-    </head>
-    <body>
-        <div class="logo">
-            <img src="../../img/ifpe_logomarca.png" alt="logo IFPE">
-        </div><!-- logo do sistema -->
-        
-        <div class="container">
-            <div class="conteudo">
-                <h1>Sistema de Gestão Acadêmica -ACAD</h1>
-                <h2><a href="menu_secretaria.html">Secretaria</a> :: Cadastrar Professor</h2>
-
-                <div class="cadastro">
-                    <form action="form-to-cadastro.php" method="post">
-                        <div class="nome">
-                            <label for="nome" class="nom">Nome:</label>
-                            <input type="text" id="nome">
-                        </div>
-                        <div class="cpf">
-                            <label for="cpf" class="cepef">CPF:</label>
-                            <input type="text" id="cpf">
-                        </div>
-                        <div class="idprofessor">
-                            <label for="idprofessor" class="matr">Identidade:</label>
-                            <input type="text" id="idprofessor">
-                        </div>
-                        <button type="submit" name="Enviar" value="Enviar" id="botao">Enviar</button>
-                    </form>
-                </div>
-
-                <a href="../index.html" class="menu-principal">Menu principal</a>
+<head>
+    <meta charset="utf-8">
+    <meta name="description" content="Página para a secretaria cadastrar professor no Sistema de Gestão Acadêmica - ACAD feito para praticar a criação de páginas para um sistema acadêmico da cadeira Projeto e Prática 1, coordernado pelo professor Francisco Junior, codificado pelo grupo: Barbaha Maria, Thayane Lopes, Rennan Maxi e Vicente Vinicius; Turma IPI2015.2T">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Sistema de Gestão Acadêmica - ACAD</title>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,900' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="../../css/style.css">
+</head>
+<body>
+    <section class="sistem-content">
+        <section class="topofix">
+            <div class="container">
+                <img src="../../img/logo-sistema.jpg" alt="logo do Sistema IFJG">
+                <a href="../index.html" class="btn">Voltar ao menu</a> <!-- Esta tag será o botão para voltar a página do site, caso queira. -->
             </div>
+        </section>
+        <div class="container">
+            <section class="login">
+                <div class="perfil secret">
+                    <h1>Secretaria</h1>
+                </div>
+                <form class="formzinho" name="formzinho">
+                <label for="nome" class="nom strong">Nome:</label>
+                    <input type="text" id="nome"> <br>
+                    <label for="cpf" class="cepef strong">CPF:</label>
+                    <input type="text" id="cpf" name="cpf" onkeypress="MascaraCPF(formzinho.cpf);" onblur="ValidarCPF(formzinho.cpf)" maxlength="14"> <br>
+                    <label for="idprofessor" class="matr strong">Identidade:</label>
+                    <input type="text" id="idprofessor" name="rg" onkeypress="MascaraRG(formzinho.rg);" onblur="ValidarRG(formzinho.rg)" maxlength="9"><br>
+
+                    <button type="submit" name="Enviar" value="Enviar" id="botao">Enviar</button>
+                </form>
+            </section>
         </div>
-        
-    </body>
+    </section>
+    <script src="../../js/validacao.js"></script>
+</body>
 </html>
