--- a/sistema/secretaria/menu_secretaria.html
+++ b/sistema/secretaria/menu_secretaria.html
@@ -8,32 +8,35 @@
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,900' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="../../css/style.css">
     </head>
+
     <body>
-        <div class="logo">
-            <img src="../../img/ifpe_logomarca.png" alt="logo IFPE">
-        </div><!-- logo do sistema -->
-        
+        <section class="sistem-content">
+            <section class="topofix">
+                <div class="container">
+                    <img src="../../img/logo-sistema.jpg" alt="logo do Sistema IFJG">
+                    <a href="../index.html" class="btn">Voltar ao menu</a> <!-- Esta tag será o botão para voltar a página do site, caso queira. -->
+                </div>
+            </section>
+
         <div class="container">
-            <div class="conteudo">
-                <h1>Sistema de Gestão Acadêmica -ACAD</h1>
-                <h2>Portal da Secretaria</h2>
+            <section class="conteudo">
                 <ul type="1">
                     <li>
-                        <a href="cadastrar_professor.html">Cadastrar professor</a>
+                        <a href="cadastrar_professor.html" class="secret">Cadastrar professor</a>
                     </li>
                     <li>
-                        <a href="cadastrar_cursos_disciplinas.html">Cadastrar cursos e disciplinas</a>
+                        <a href="cadastrar_cursos_disciplinas.html" class="secret">Cadastrar cursos e disciplinas</a>
                     </li>
                     <li>
-                        <a href="realizar_matricula.html">Realizar matricula</a>
+                        <a href="realizar_matricula.html" class="secret">Realizar matricula</a>
                     </li>
                     <li>
-                        <a href="emitir_historico.html">Emitir histórico</a>
+                        <a href="emitir_historico.html" class="secret">Emitir histórico</a>
                     </li>
                 </ul>
-                <a href="../index.html" class="menu-principal">Menu principal</a>
-            </div>
+            </section>
         </div>
         
     </body>
 </html>
+
