determinando campos obrigatórios e fazendo pequenas correções

--- a/sistema/aluno/login_aluno.html
+++ b/sistema/aluno/login_aluno.html
@@ -23,9 +23,9 @@
                     </div>
                     <form action="post" class="login-aluno">
                         <label for="">Nome:</label>
-                        <input type="text" name="nomeAluno">
+                        <input type="text" name="nomeAluno" required="">
                         <label for="">Senha:</label>
-                        <input type="text" name="senhaAluno">
+                        <input type="text" name="senhaAluno" required="">
                         <a href="menu_aluno.html">Entrar</a>
                     </form>
                 </section>
