--- a/sistema/professor/cadastrar_projeto_pesquisa.html
+++ b/sistema/professor/cadastrar_projeto_pesquisa.html
@@ -20,7 +20,7 @@
         <div class="container">
             <section class="login">
                 <div class="perfil professor">
-                    <h1>Professor</h1>
+                    <h1>Cadastrar Projeto Pesquisa</h1>
                 </div>
                 <form name="formzinho" class="formzinho">
                 <label for="professor" class="strong prof">Professor:</label>
@@ -33,10 +33,10 @@
                     </select><br>
 
                     <label for="titulo" class="titl strong">Titulo do projeto:</label>
-                    <input type="text" id="titulo" maxlength="50"> <br>
+                    <input type="text" id="titulo" maxlength="50" required=""> <br>
 
                     <label for="descricao" class="descr strong">Descrição:</label><br>
-                    <textarea name="descricao" id="descricao" cols="20" rows="5"></textarea> <br>
+                    <textarea name="descricao" id="descricao" cols="20" rows="5" required=""></textarea> <br>
 
                     <button type="submit" name="Enviar" value="Enviar" id="botao">Salvar</button>
                 </form>
