--- a/sistema/professor/registrar_faltas.html
+++ b/sistema/professor/registrar_faltas.html
@@ -19,7 +19,7 @@
         <div class="container">
             <section class="login">
                 <div class="perfil professor">
-                    <h1>Professor</h1>
+                    <h1>Registrar faltas</h1>
                 </div>
                 <form name="formzinho" class="formzinho">
                     <label for="aluno" class="aluno strong">Aluno:</label>
@@ -47,11 +47,11 @@
                     <label for="unidade2">Unidade II</label>
                     <input type="radio" id="unidade2" name="unidade" value="unidade2"> <br>
 
-                    <label for="nota" class="nota strong">Nota:</label>
-                    <input type="text" id="nota" maxlength="4"> <br>
+                    <label for="nota" class="nota strong">Faltas:</label>
+                    <input type="text" id="nota" maxlength="4" required=""> <br>
 
 
-                    <button type="submit" name="Enviar" value="Enviar" id="botao">Registrar nota</button>
+                    <button type="submit" name="Enviar" value="Enviar" id="botao">Registrar faltas</button>
                 </form>
             </section>
         </div>
