--- a/sistema/professor/registrar_notas.html
+++ b/sistema/professor/registrar_notas.html
@@ -19,7 +19,7 @@
         <div class="container">
             <section class="login">
                 <div class="perfil professor">
-                    <h1>Professor</h1>
+                    <h1>Registrar nota</h1>
                 </div>
                 <form name="formzinho" class="formzinho">
                     <label for="aluno" class="strong">Aluno:</label>
@@ -48,10 +48,10 @@
                     <label for="unidade2">Unidade II</label> <br>
 
                     <label for="nota" class="nota">Nota:</label>
-                    <input type="text" id="nota" maxlength="4"> <br>
+                    <input type="text" id="nota" maxlength="4" required=""> <br>
 
 
-                    <button type="submit" name="Enviar" value="Enviar" id="botao">Registrar Falta</button>
+                    <button type="submit" name="Enviar" value="Enviar" id="botao">Registrar nota</button>
                 </form>
             </section>
         </div>
