--- a/sistema/secretaria/cadastrar_cursos_disciplinas.html
+++ b/sistema/secretaria/cadastrar_cursos_disciplinas.html
@@ -20,7 +20,7 @@
         <div class="container">
             <section class="login">
                 <div class="perfil secret">
-                    <h1>Secretaria</h1>
+                    <h1>Cadastrar cursos e disciplinas</h1>
                 </div>
             </section>
         </div>
