--- a/sistema/secretaria/emitir_historico.html
+++ b/sistema/secretaria/emitir_historico.html
@@ -19,7 +19,7 @@
         <div class="container">
             <section class="login">
                 <div class="perfil secret">
-                    <h1>Secretaria</h1>
+                    <h1>Emitir histórico</h1>
                 </div>
                 <form class="formzinho" name="formzinho">
                     <label for="aluno" class="strong">Aluno:</label>
