--- a/sistema/aluno/alterar_dados_pessoais.html
+++ b/sistema/aluno/alterar_dados_pessoais.html
@@ -19,7 +19,7 @@
             <div class="container">
                 <section class="login">
                     <div class="perfil aluno">
-                        <h1>Aluno</h1>
+                        <h1>Alterar dados pessoais</h1>
                     </div>
                     <form class="formzinho" name="formzinho">
                         <label for="nome" class="nom">Nome:</label>
@@ -28,7 +28,7 @@
                         <input type="text" id="cpf" name="cpf" onkeypress="MascaraCPF(formzinho.cpf);" onblur="ValidarCPF(formzinho.cpf)" maxlength="14"> <br>
                         <label for="matricula" class="matr">Matrícula:</label>
                         <input type="text" id="matricula"><br>
-                        <a href="">Enviar</a>
+                         <button type="submit" name="Enviar" value="Enviar" id="botao">Enviar</button>
                     </form>
                 </section>
             </div>
