--- a/sistema/aluno/emitir_comprovante_matricula.html
+++ b/sistema/aluno/emitir_comprovante_matricula.html
@@ -1,58 +1,46 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="description" content="Página do portal do aluno para alterar dados pessoais no Sistema de Gestão Acadêmica - ACAD feito para praticar a criação de páginas para um sistema acadêmico da cadeira Projeto e Prática 1, coordernado pelo professor Francisco Junior, codificado pelo grupo: Barbaha Maria, Thayane Lopes, Rennan Maxi e Vicente Vinicius; Turma IPI2015.2T">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Sistema de Gestão Acadêmica - ACAD</title>
-        <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,900' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="../../css/style.css">
-    </head>
-    <body>
-        <div class="logo">
-            <img src="../../img/ifpe_logomarca.png" alt="logo IFPE">
-        </div><!-- logo do sistema -->
-        
-        <div class="container">
-            <div class="conteudo">
-                <h1>Sistema de Gestão Acadêmica -ACAD</h1>
-                <h2>
-                    <a href="menu_aluno.html">Aluno</a> :: Emitir comprovante de matrícula
-                </h2>
-
-                    <div class="cadastro">
-                        <form action="form-to-cadastro.php" method="post">
-                            <div class="aluno">
-                                <label for="aluno" class="alun">Aluno:</label>
-                                 <select>
-                                    <option value="0">Selecione um aluno</option>
-                                    <option value="Barbaha">Barbaha</option>
-                                    <option value="Thayane">Thayane</option>
-                                    <option value="Rennan">Rennan</option>
-                                    <option value="Vicente">Vicente</option>
-                                </select> 
-                            </div>
-
-                            <div class="semestre">
-                                <label for="semestre" class="semes">Semestre:</label>
-                                <input type="text" id="semestre" maxlength="8">
-                            </div>
-
-                            <div class="emissao">
-                                <label for="emissao" class="emiss">Tipo de emissão:</label><br>
-                                <label for="emissao1">Gerar PDF</label>
-                                <input type="radio" id="emissao1" value="emissao1"><br>
-                                <label for="emissao2">Enviar por e-mail</label>
-                                <input type="radio" id="emissao2" value="emissao2">
-                            </div>
-
-                            <button type="submit" name="Enviar" value="Enviar" id="botao">Emitir</button>
-                        </form>
-                    </div>
-
-                <a href="../index.html" class="menu-principal">Menu principal</a>
+<head>
+    <meta charset="utf-8">
+    <meta name="description" content="Página do portal do aluno para alterar dados pessoais no Sistema de Gestão Acadêmica - ACAD feito para praticar a criação de páginas para um sistema acadêmico da cadeira Projeto e Prática 1, coordernado pelo professor Francisco Junior, codificado pelo grupo: Barbaha Maria, Thayane Lopes, Rennan Maxi e Vicente Vinicius; Turma IPI2015.2T">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Sistema de Gestão Acadêmica - ACAD</title>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,900' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="../../css/style.css">
+</head>
+<body>
+    <section class="sistem-content">
+        <section class="topofix">
+            <div class="container">
+                <img src="../../img/logo-sistema.jpg" alt="logo do Sistema IFJG">
+                <a href="../index.html" class="btn">Voltar ao menu</a> <!-- Esta tag será o botão para voltar a página do site, caso queira. -->
             </div>
+        </section>
+        <div class="container">
+            <section class="login">
+                <div class="perfil aluno">
+                    <h1>Emitir comprovante de matricula</h1>
+                </div>
+                <form class="formzinho" name="formzinho">
+                    <label for="aluno" class="strong alun">Aluno:</label>
+                    <select>
+                        <option value="0">Selecione um aluno</option>
+                        <option value="Barbaha">Barbaha</option>
+                        <option value="Thayane">Thayane</option>
+                        <option value="Rennan">Rennan</option>
+                        <option value="Vicente">Vicente</option>
+                    </select> <br>
+                    <label for="semestre" class="strong semes">Semestre:</label>
+                    <input type="text" id="semestre" maxlength="8" required=""><br>
+                    <label for="emissao" class="strong emiss">Tipo de emissão:</label><br>
+                    <label for="emissao1">Gerar PDF</label>
+                    <input type="radio" id="emissao1" value="emissao1"><br>
+                    <label for="emissao2">Enviar por e-mail</label>
+                    <input type="radio" id="emissao2" value="emissao2"><br>
+                     <button type="submit" name="Enviar" value="Enviar" id="botao">Emitir</button>
+                </form>
+            </section>
         </div>
-
-    </body>
+    </section>
+</body>
 </html>
