--- a/sistema/secretaria/cadastrar_professor.html
+++ b/sistema/secretaria/cadastrar_professor.html
@@ -19,15 +19,15 @@
         <div class="container">
             <section class="login">
                 <div class="perfil secret">
-                    <h1>Secretaria</h1>
+                    <h1>Cadastrar Professor</h1>
                 </div>
                 <form class="formzinho" name="formzinho">
                 <label for="nome" class="nom strong">Nome:</label>
-                    <input type="text" id="nome"> <br>
+                    <input type="text" id="nome" required=""> <br>
                     <label for="cpf" class="cepef strong">CPF:</label>
-                    <input type="text" id="cpf" name="cpf" onkeypress="MascaraCPF(formzinho.cpf);" onblur="ValidarCPF(formzinho.cpf)" maxlength="14"> <br>
+                    <input type="text" id="cpf" name="cpf" onkeypress="MascaraCPF(formzinho.cpf);" onblur="ValidarCPF(formzinho.cpf)" maxlength="14" required=""> <br>
                     <label for="idprofessor" class="matr strong">Identidade:</label>
-                    <input type="text" id="idprofessor" name="rg" onkeypress="MascaraRG(formzinho.rg);" onblur="ValidarRG(formzinho.rg)" maxlength="9"><br>
+                    <input type="text" id="idprofessor" name="rg" onkeypress="MascaraRG(formzinho.rg);" onblur="ValidarRG(formzinho.rg)" maxlength="9" required=""><br>
 
                     <button type="submit" name="Enviar" value="Enviar" id="botao">Enviar</button>
                 </form>
