--- a/sistema/secretaria/login_secretaria.html
+++ b/sistema/secretaria/login_secretaria.html
@@ -23,9 +23,9 @@
                     </div>
                     <form action="post" class="login-aluno">
                         <label for="">Login:</label>
-                        <input type="text" name="nomeAluno">
+                        <input type="text" name="nomeAluno" required="">
                         <label for="">Senha:</label>
-                        <input type="text" name="senhaAluno">
+                        <input type="text" name="senhaAluno" required="">
                         <a href="menu_secretaria.html">Entrar</a>
                     </form>
                 </section>
