alteração no botão voltar do sistema

--- a/sistema/aluno/visualizar_notas_faltas.html
+++ b/sistema/aluno/visualizar_notas_faltas.html
@@ -13,7 +13,7 @@
         <section class="topofix">
             <div class="container">
                 <img src="../../img/logo-sistema.jpg" alt="logo do Sistema IFJG">
-                <a href="../index.html" class="btn">Voltar ao menu</a> <!-- Esta tag será o botão para voltar a página do site, caso queira. -->
+                <a href="menu_aluno.html" class="btn">Voltar</a> <!-- Esta tag será o botão para voltar a página do site, caso queira. -->
             </div>
         </section>
 
@@ -23,7 +23,7 @@
                     <h1>Visualizar notas e faltas</h1>
                 </div>
                 <form class="formzinho" name="formzinho">
-                    <label for="aluno">Aluno:</label>
+                    <label for="aluno" class="strong">Aluno:</label>
                     <select>
                         <option value="0">Selecione um aluno</option>
                         <option value="Barbaha">Barbaha</option>
@@ -31,7 +31,7 @@
                         <option value="Rennan">Rennan</option>
                         <option value="Vicente">Vicente</option>
                     </select> <br>
-                    <label for="disciplinas" class="disc">Disciplinas:</label>
+                    <label for="disciplinas" class="disc strong">Disciplinas:</label>
                     <input type="checkbox" id="poo" value="poo">
                     <label for="poo">POO</label>
                     <input type="checkbox" id="web1" value="web1">
@@ -39,7 +39,7 @@
                     <input type="checkbox" id="prpr" value="prpr">
                     <label for="prpr">PRPR</label>
                     <input type="checkbox" id="bd" value="bd">
-                    <label for="bd">Banco de dados</label>
+                    <label for="bd">Banco de dados</label> <br>
                      <button type="submit" name="Enviar" value="Enviar" id="botao">Pesquisar</button>
                 </form>
             </section>
