corrigindo erro de campo obrigatório das págs de login

--- a/sistema/professor/login_professor.html
+++ b/sistema/professor/login_professor.html
@@ -21,12 +21,12 @@
                     <div class="perfil professor">
                         <h1>Professor</h1>
                     </div>
-                    <form action="post" class="login-aluno">
+                    <form action="menu_professor.html" class="login-perfil">
                         <label for="">Login:</label>
                         <input type="text" name="nomeAluno" required="">
                         <label for="">Senha:</label>
-                        <input type="text" name="senhaAluno" required="">
-                        <a href="menu_professor.html">Entrar</a>
+                        <input type="password" name="senhaAluno" required="">
+                        <button type="submit">Entrar</button>
                     </form>
                 </section>
             </div>
