--- a/sistema/secretaria/login_secretaria.html
+++ b/sistema/secretaria/login_secretaria.html
@@ -21,12 +21,12 @@
                     <div class="perfil secret">
                         <h1>Secretaria</h1>
                     </div>
-                    <form action="post" class="login-aluno">
+                    <form action="menu_secretaria.html" class="login-perfil">
                         <label for="">Login:</label>
                         <input type="text" name="nomeAluno" required="">
                         <label for="">Senha:</label>
-                        <input type="text" name="senhaAluno" required="">
-                        <a href="menu_secretaria.html">Entrar</a>
+                        <input type="password" name="senhaAluno" required="">
+                        <button type="submit">Entrar</button>
                     </form>
                 </section>
             </div>
